--- a/main.css
+++ b/main.css
@@ -25,21 +25,28 @@ header{
     justify-content: center;
 }
 
-nav{
+nav {
     height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 50px;
 }
 
-nav a{
+nav ul {
+    display: flex; 
+    list-style: none; 
+    padding: 0; 
+    margin: 0;
+    gap: 50px; 
+}
+
+nav a {
     color: white;
     text-decoration: none;
     transition: color 500ms;
 }
 
-.effect:hover{
+.effect:hover {
     color: #006eb0;
     transition: color 500ms;
 }
@@ -54,6 +61,10 @@ table{
     text-align: center;
     width: 500px;
     height: 250px;
+}
+
+thead{
+    height: 50px;
 }
 
 th{
