--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
         gap: 20px; /* Maak de tussenruimte kleiner */
     }
 
-    .projects, .erv-main {
+    .polaroid {
         flex-direction: column; /* Stapel elementen onder elkaar */
         gap: 30px;
         margin-top: 20px;
