--- a/main.css
+++ b/main.css
@@ -14,13 +14,16 @@ p{
     color: white;
     font-size: 1em;
 }
+header img{
+    width: 75px;
+}
 .text-roman{
     font-family: 'Times New Roman', Times, serif;
 }
 body{
     background-image: url(images/background.jpg);
     background-color: #000000;
-    height: 700px;
+    height: 100hv;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -47,6 +50,12 @@ body{
 video{
     height: 300px;
     width: 550px;
+}
+.erv-main a{
+    text-decoration: none;
+}
+.erv-main h2{
+    transition: color 500ms;
 }
 
 
@@ -99,13 +108,19 @@ th{
 }
 td{
     border: 1px solid #ffffff80;
+    transition: background-color 500ms
+}
+table tr:hover td {
+    background-color: hsla(0, 0%, 0%, 0.5);
+    transition: background-color 500ms;
 }
 
 
 
+
     /*Index*/
-.button-CV {
-    background-color: rgba(0, 109, 176, 0.5);
+article a{
+    background-color: rgba(180, 180, 180, 0.5);
     padding: 15px 45px;
     border-left: 2px solid white;
     border-right: 2px solid white;
@@ -114,6 +129,7 @@ td{
     text-decoration: none;
     display: inline-block;
     font-size: 1em;
+    transition: background-color 500ms;
 }
 article{
     width: 500px;
@@ -134,9 +150,13 @@ article{
     flex-direction: row;
     gap: 300px;
 }
-.contact-cv{
+.buttons{
     display: flex;
     gap: 25px;
+}
+.beffect:hover {
+    background-color: rgb(0, 110, 176);
+    transition: background-color 500ms;
 }
 
 
@@ -184,6 +204,9 @@ article{
     padding: 30px;
     width: 500px;
 }
+.socials a img{
+    width: 60px;
+}
 p a{
     text-decoration: none;
     color: rgba(180, 180, 180, 0.750);
@@ -215,7 +238,7 @@ p a{
     color: white;
 }
 .contact-form label {
-    font-size: 1.875em;
+    font-size: 1em;
     color: white;
 }
 .contact-form input,
@@ -230,11 +253,12 @@ p a{
 .contact-form button {
     padding: 10px 15px;
     color: #fff;
-    background-color: rgba(180, 180, 180, 0.499);
+    background-color: rgba(180, 180, 180, 0.5);
     border: none;
     border-radius: 5px;
-    transition: color 500ms;
+    transition: background-color 500ms;
 }
 .contact-form button:hover {
     background-color: rgb(0, 110, 176);
+    transition: background-color 500ms;
 }
